--- a/src/istio/flavors/zarf.yaml
+++ b/src/istio/flavors/zarf.yaml
@@ -8,28 +8,28 @@ components:
       flavor: upstream
     charts:
       - name: istiod
-        namespace: istio-system
         url: https://istio-release.storage.googleapis.com/charts
         version: 1.19.3
+        namespace: istio-system
         valuesFiles:
           - "values/upstream-values.yaml"
     images:
-      - "docker.io/istio/pilot:1.19.3-distroless"
-      - "docker.io/istio/proxyv2:1.19.3-distroless"
+      - docker.io/istio/pilot:1.19.3-distroless
+      - docker.io/istio/proxyv2:1.19.3-distroless
 
   - name: istio-controlplane
     only:
       flavor: registry1
     charts:
       - name: istiod
-        namespace: istio-system
         url: https://istio-release.storage.googleapis.com/charts
         version: 1.19.3
+        namespace: istio-system
         valuesFiles:
           - "values/registry1-values.yaml"
     images:
-      # - "registry1.dso.mil/ironbank/opensource/istio/pilot:1.19.3"
-      # - "registry1.dso.mil/ironbank/opensource/istio/proxyv2:1.19.3"
+      # - registry1.dso.mil/ironbank/opensource/istio/pilot:1.19.3
+      # - registry1.dso.mil/ironbank/opensource/istio/proxyv2:1.19.3
       - registry1.dso.mil/ironbank/tetrate/istio/proxyv2:1.19.3-tetratefips-v0
       - registry1.dso.mil/ironbank/tetrate/istio/pilot:1.19.3-tetratefips-v0
 
@@ -38,9 +38,9 @@ components:
       flavor: cng
     charts:
       - name: istiod
-        namespace: istio-system
         url: https://istio-release.storage.googleapis.com/charts
         version: 1.19.3
+        namespace: istio-system
         valuesFiles:
           - "values/cng-values.yaml"
     images:
