--- a/src/prometheus-stack/zarf.yaml
+++ b/src/prometheus-stack/zarf.yaml
@@ -32,13 +32,13 @@ components:
           - "values/upstream-values.yaml"
     images:
       #upstream images
-      - "quay.io/prometheus/node-exporter:v1.6.1"
-      - "quay.io/prometheus-operator/prometheus-operator:v0.69.1"
-      - "registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.10.1"
-      - "quay.io/prometheus/alertmanager:v0.26.0"
-      - "quay.io/prometheus-operator/prometheus-config-reloader:v0.69.1"
-      - "quay.io/prometheus/prometheus:v2.47.2"
-      - "registry.k8s.io/ingress-nginx/kube-webhook-certgen:v20221220-controller-v1.5.1-58-g787ea74b6"
+      - quay.io/prometheus/node-exporter:v1.6.1
+      - quay.io/prometheus-operator/prometheus-operator:v0.69.1
+      - registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.10.1
+      - quay.io/prometheus/alertmanager:v0.26.0
+      - quay.io/prometheus-operator/prometheus-config-reloader:v0.69.1
+      - quay.io/prometheus/prometheus:v2.47.2
+      - registry.k8s.io/ingress-nginx/kube-webhook-certgen:v20221220-controller-v1.5.1-58-g787ea74b6
 
   - name: kube-prometheus-stack
     required: true
@@ -54,13 +54,13 @@ components:
         valuesFiles:
           - "values/registry1-values.yaml"
     images:
-      - "registry1.dso.mil/ironbank/opensource/prometheus/node-exporter:v1.6.1"
-      - "registry1.dso.mil/ironbank/opensource/prometheus-operator/prometheus-operator:v0.69.1"
-      - "registry1.dso.mil/ironbank/opensource/kubernetes/kube-state-metrics:v2.10.1"
-      - "registry1.dso.mil/ironbank/opensource/prometheus/alertmanager:v0.26.0"
-      - "registry1.dso.mil/ironbank/opensource/prometheus-operator/prometheus-config-reloader:v0.69.1"
-      - "registry1.dso.mil/ironbank/opensource/prometheus/prometheus:v2.47.2"
-      - "registry1.dso.mil/ironbank/opensource/ingress-nginx/kube-webhook-certgen:v1.3.0"
+      - registry1.dso.mil/ironbank/opensource/prometheus/node-exporter:v1.6.1
+      - registry1.dso.mil/ironbank/opensource/prometheus-operator/prometheus-operator:v0.69.1
+      - registry1.dso.mil/ironbank/opensource/kubernetes/kube-state-metrics:v2.10.1
+      - registry1.dso.mil/ironbank/opensource/prometheus/alertmanager:v0.26.0
+      - registry1.dso.mil/ironbank/opensource/prometheus-operator/prometheus-config-reloader:v0.69.1
+      - registry1.dso.mil/ironbank/opensource/prometheus/prometheus:v2.47.2
+      - registry1.dso.mil/ironbank/opensource/ingress-nginx/kube-webhook-certgen:v1.3.0
 
 
   - name: kube-prometheus-stack
@@ -79,7 +79,7 @@ components:
     images:
       #cng images
       - cgr.dev/chainguard/kube-state-metrics:latest
-      - "quay.io/prometheus/node-exporter:v1.6.1"
+      - quay.io/prometheus/node-exporter:v1.6.1
       - cgr.dev/chainguard/prometheus:latest
       - cgr.dev/chainguard/prometheus-alertmanager:latest
       - cgr.dev/chainguard/prometheus-config-reloader:latest
