--- a/renovate.json
+++ b/renovate.json
@@ -97,7 +97,24 @@
       ],
       "depNameTemplate": "registry1.dso.mil/ironbank/neuvector/neuvector/manager",
       "datasourceTemplate": "docker"
-    }
+    },
+    {
+      "fileMatch": ["^chart/Chart\\.yaml$"],
+      "matchStrings": [
+        "- NeuVector:\\s+(?<currentValue>.+)"
+      ],
+      "depNameTemplate": "registry1.dso.mil/ironbank/neuvector/neuvector/controller",
+      "datasourceTemplate": "docker"
+    },
+    {
+      "fileMatch": ["^chart/Chart\\.yaml$"],
+      "matchStrings": [
+        "appVersion:\\s+(?<currentValue>.+)"
+      ],
+      "depNameTemplate": "registry1.dso.mil/ironbank/neuvector/neuvector/enforcer",
+      "datasourceTemplate": "docker"
+    },
+
 
   ],
   "hostRules": [
