--- a/renovate.json
+++ b/renovate.json
@@ -44,7 +44,7 @@
         "// renovate: datasource=github-tags depName=(?<depName>[^ ]+) versioning=(?<versioning>[^\n]+)\n.*?uds@(?<currentValue>[^\\s]+)"
       ],
       "datasourceTemplate": "github-tags",
-      "currentValueTemplate": "v{{{currentValue}}}"
+      "extractVersionTemplate": "^v(?<version>.*)$"
     },
     {
       "fileMatch": ["\\.*\\.ya?ml$"],
@@ -97,24 +97,7 @@
       ],
       "depNameTemplate": "registry1.dso.mil/ironbank/neuvector/neuvector/manager",
       "datasourceTemplate": "docker"
-    },
-    {
-      "fileMatch": ["^chart/Chart\\.yaml$"],
-      "matchStrings": [
-        "- NeuVector:\\s+(?<currentValue>.+)"
-      ],
-      "depNameTemplate": "registry1.dso.mil/ironbank/neuvector/neuvector/controller",
-      "datasourceTemplate": "docker"
-    },
-    {
-      "fileMatch": ["^chart/Chart\\.yaml$"],
-      "matchStrings": [
-        "appVersion:\\s+(?<currentValue>.+)"
-      ],
-      "depNameTemplate": "registry1.dso.mil/ironbank/neuvector/neuvector/enforcer",
-      "datasourceTemplate": "docker"
-    },
-
+    }
 
   ],
   "hostRules": [
