--- a/renovate.json
+++ b/renovate.json
@@ -29,7 +29,7 @@
       "fileMatch": ["\\.*\\.ya?ml$", "^\\.vscode/settings\\.json$"],
       "matchStrings": [
         "# renovate: datasource=github-tags depName=(?<depName>[^ ]+) versioning=(?<versioning>.*?)( extractVersion=(?<extractVersion>.*?))?\n.*?(?:version:|ref:) (?<currentValue>[^\\s]+)",
-        "\/\/ renovate: datasource=github-tags depName=(?<depName>[^ ]+) versioning=(?<versioning>.*?)( extractVersion=(?<extractVersion>.*?))?\n.*?(https:\/\/raw.githubusercontent.com\\/\\k<depName>\/)(?<currentValue>[^\\s]+)\/"
+        "\/\/ renovate: datasource=github-tags depName=(?<depName>[^ ]+) versioning=(?<versioning>.*?)( extractVersion=(?<extractVersion>.*?))?\n.*?(https:\/\/raw.githubusercontent.com\/\\k<depName>\/)(?<currentValue>[^\\s]+)\/"
       ],
       "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}semver{{/if}}",
       "datasourceTemplate": "github-tags",
@@ -49,13 +49,6 @@
       "fileMatch": ["\\.*\\.ya?ml$"],
       "matchStrings": ["- (?<depName>.*):(?<currentValue>.*)"],
       "datasourceTemplate": "docker"
-    },
-    {
-      "fileMatch": ["\\.*\\.ya?ml$"],
-      "matchStrings": ["url:\\s*oci://ghcr.io/defenseunicorns/packages/init:(?<currentValue>v\\d+\\.\\d+\\.\\d+)"],
-      "datasourceTemplate": "github-tags",
-      "depNameTemplate": "defenseunicorns/zarf",
-      "versioningTemplate": "semver"
     },
     {
       "fileMatch": ["\\.*\\.ya?ml$"],
