--- a/renovate.json
+++ b/renovate.json
@@ -32,8 +32,8 @@
         "\/\/ renovate: datasource=github-tags depName=(?<depName>[^ ]+) versioning=(?<versioning>.*?)( extractVersion=(?<extractVersion>.*?))?\n.*?(https:\/\/raw.githubusercontent.com\/defenseunicorns\/zarf\/)(?<currentValue>[^\\s]+)\/"
       ],
       "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}semver{{/if}}",
-      "datasourceTemplate": "github-tags",
-      "extractVersionTemplate": "{{#if extractVersion}}{{{extractVersion}}}{{else}}null{{/if}}"
+      "datasourceTemplate": "github-tags"
+
     },
     {
       "depNameTemplate": "defenseunicorns/uds-cli",
