--- a/.github/workflows/pull-request-conditionals.yaml
+++ b/.github/workflows/pull-request-conditionals.yaml
@@ -45,7 +45,12 @@ jobs:
     strategy:
       matrix:
         package: ${{ fromJSON(needs.check-paths.outputs.packages) }}
+        flavor: [upstream, registry1]
+        test_type: [install, upgrade]
+
     uses: ./.github/workflows/test.yaml
     with:
       package: ${{ matrix.package }}
+      flavor: ${{ matrix.flavor }}
+      test_type: ${{ matrix.test_type }}
     secrets: inherit # Inherits all secrets from the parent workflow.
