--- a/.github/workflows/pull-request-conditionals.yaml
+++ b/.github/workflows/pull-request-conditionals.yaml
@@ -48,13 +48,13 @@ jobs:
         test_type: [install, upgrade]
         exclude:
           - test_type: upgrade
-            flavor: upstream
-          - test_type: upgrade
-            flavor: registry1
         include:
           - test_type: upgrade
+            flavor: registry1
             package: all
-
+          - test_type: upgrade
+            flavor: upstream
+            package: all
     uses: ./.github/workflows/test.yaml
     with:
       package: ${{ matrix.package }}
